--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@
 .click {
   cursor: pointer;
 }
+.no__cursor{
+  cursor: not-allowed;
+}
 
 body {
   background-color: #242424
@@ -75,6 +78,11 @@ SEARCH
 
 */
 
+.search__results{
+  display: flex;
+  flex-direction: row;  
+  justify-content: space-between;
+}
 .input {
   position: relative;
   display: flex;
@@ -84,6 +92,10 @@ SEARCH
   margin: 0 auto;
   padding: 24px;
   /* background-color: #242424; */
+}
+
+.search__area{
+  position: relative;
 }
 
 .input__search {
@@ -98,13 +110,20 @@ SEARCH
 }
 .fa__search {
   position: absolute;
-  right: 8%;
+  right: 16px;
   top: 50%;
   transform: translateY(-50%);
   font-size: 40px;
 }
 .results{
     color: white;
+}
+.sort__option{
+  border: none;
+  border-radius: 8px;
+  text-align: center;
+  padding: 6px;
+  font-size: 20px;
 }
 
 /* 
@@ -204,12 +223,12 @@ ERROR STATE
 */
 
 .error .error__container {
-    opacity: 1;
+    display: flex;
     transition: all 450ms;
 }
 
 .error__container{
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -223,7 +242,6 @@ ERROR STATE
     border: none;
     border-radius: 50px;
     color: white;
-    opacity: 0;
 
 
 }
@@ -250,6 +268,7 @@ ERROR STATE
     width: 100%;
     max-width: 600px;
     font-size: 32px;
+    text-align: center;
 }
 .fa-times{
     font-size: 40px;
@@ -262,6 +281,14 @@ ERROR STATE
 .error #movies{
     display: none;
 }
+.error #search{
+    display: none;
+}
+.error .footer{
+    display: none;
+}
+
+
 
 
 
@@ -274,12 +301,19 @@ FOOTER
 .footer{
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 36px;
+}
+.footer__img--wrapper{
+  width: 100%;
+  max-width: 100px;
 }
 .footer__img{
     display: flex;
     justify-content: center;
+    filter: invert();
 
     width: 100%;
 }
@@ -289,3 +323,64 @@ FOOTER
     bottom: 0;
 }
 
+.footer__links{
+  margin-top: 24px;
+}
+.footer__link{
+  position: relative;
+  color: white;
+  text-decoration: none;
+  margin: 0 16px;
+}
+
+
+
+
+
+.link__hover--effect{
+  position: relative;
+}
+.link__hover--effect::after{
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 3px;
+  bottom: -3px;
+  right: 0;
+  background-color: white;
+  transition: all 300ms ease-in-out ;
+}
+.link__hover--effect:hover::after{
+  left: 0;
+  width: 100%;
+  
+}
+
+
+
+@media (max-width: 768px){
+  .movie{
+    width: calc(100% / 2);
+  }
+  .input__search {
+    font-size: 24px;
+    width: 100%;
+    max-width: 400px;
+  }
+
+  
+  
+}
+@media (max-width: 480px){
+  .movie{
+    width: 100%;
+  }
+  .input__search{
+    font-size: 20px;
+  }
+  .sort__option{
+    border-radius: 6px;
+    padding: 4px;
+    font-size: 16px;
+  }
+}
